testing ads- fixed initially visible

--- a/common/less/ads.less
+++ b/common/less/ads.less
@@ -125,9 +125,10 @@ Small phone (≤430px): 46px */
 
 .ad-card {
   width: 100%;
-  margin: 2rem 0;
+  margin: 1rem 0 !important;
   background: transparent !important;
   box-shadow: none !important;
+  padding: 0 !important;
 
   .ad-container {
     min-width: 250px;
